--- a/index.html
+++ b/index.html
@@ -186,8 +186,7 @@
     <p>Click to try anyway...</p>
 </div>
 <script src="/js/script.js"></script>
-
-    <script src="/js/frontpage.js"></script>
-
+<script src="/js/frontpage.js"></script>
+<!-- archive -->
 </body>
 </html>
