--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@
         </section>
 
     </div>
+        <h2 class="tag">Check out previous years! And remember to find, follow, track, like &amp; love us elsewhere:</h2><ul class="menu"><li class="menu-item"><a href="https://2012.webrebels.org/">WR 2012</a></li><li class="menu-item"><a href="https://2013.webrebels.org/">WR 2013</a></li><li class="menu-item"><a href="https://2014.webrebels.org/">WR 2014</a></li><li class="menu-item"><a href="https://2015.webrebels.org/">WR 2015</a></li><li class="menu-item"><a href="https://2016.webrebels.org/">WR 2016</a></li><li class="menu-item"><a href="https://2017.webrebels.org/">WR 2017</a></li><li class="menu-item"><a href="https://2018.webrebels.org/">WR 2018</a></li><li class="menu-item"><a href="https://2020.webrebels.org/">WR 2020</a></li><li class="menu-item"><a href="https://twitter.com/web_rebels">Twitter</a></li><li class="menu-item"><a href="https://www.youtube.com/playlist?list=PLlbIku9ii23qeysiHbOZ7F4OBxSnDJG5v">Youtube</a></li><li class="menu-item"><a href="https://webrebels.tumblr.com">Tumblr</a></li><li class="menu-item"><a href="https://eepurl.com/bB12Ln">Newsletter</a></li><li class="menu-item"><a href="https://github.com/webrebels/rebeladmin/blob/master/vedtekter.md">997 686 659 MVA</a></li></ul>
+        
 </footer>
 <div id="surprompen">
     <h1>Seriously: upgrade to the newest version of your browser.<br>It will do you good!</h1>
